# speak_to_hacspeak

./: .Makefile.swp  .gitmodules  Cargo.toml  Makefile  README.md  aes  aes.c  aes.h  cbindgen.toml  main_rust_test.c
src/: lib.rs
