[package]
name = "speak_to_hacspec"
version = "0.1.0"
authors = ["TomerHawk <t.yavorgmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "speak_to_hacspec"
path = "src/lib.rs"
crate_type = ["cdylib"]


[dependencies]

rand = "0.7"
num = "0.2"
# TODO: serde is only necessary for the test crate/feature
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

# TODO: this need to change for releases
secret_integers = { path = "../../hacspec/secret-integers" }
abstract_integers = { path = "../../hacspec/abstract-integers" }
hacspec = {path = "../../hacspec/hacspec/"}
hacspec-examples = {path = "../../hacspec/spec-examples"}
libc = "0.2.0"
